Complete search and multilingual features for todo list page

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -1,4 +1,7 @@
 {
+    "add": "Thêm",
+    "edit": "Sửa",
+    "submit": "Gởi",
     "version": "Phiên bản",
     "owner": "Người tạo",
     "lphan": "Phan Phúc Lộc",
@@ -17,6 +20,33 @@
             "filter": "Có tính năng lọc dữ liệu sử dụng Observables & Rxjs",
             "stateManagement": "Sử dụng akita để quản lí State management",
             "reactiveForm": "Sử dụng reactive form"
+        }
+    },
+    "todoPage":{
+        "block" :{
+            "formTodo":{
+                "title": "Mẫu {{typeForm}} Todo",
+                "labelTitle": "Tiêu đề",
+                "placeTitle": "Tiêu đề ...",
+                "messErrorRequiredTitle": "Vui lòng nhập tiêu đề",
+                "messErrorExistTitle": "Tiêu đề đã tồn tại",
+                "labelContent": "Nội dung",
+                "placeContent": "Nội dung ...",
+                "messErrorRequiredContent": "Vui lòng nhập nội dung",
+                "labelCreator": "Người tạo",
+                "placeCreator": "Người tạo ...",
+                "messErrorRequiredCreator": "Vui lòng nhập người tạo",
+                "labelCompleted": "Hoàn thành"
+            },
+            "table":{
+                "title": "Danh sách Todo",
+                "rowTitle": "Tiêu đề",
+                "rowlContent": "Nội dung",
+                "rowlCreator": "Người tạo",
+                "rowlCompleted": "Hoàn thành",
+                "tooltipEdit": "Chỉnh sửa",
+                "tooltipDelete": "Xoá"
+            }
         }
     }
 }
