--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,7 @@
 {
+    "add": "Add",
+    "edit": "Edit",
+    "submit": "Submit",
     "version": "version",
     "owner": "Owner",
     "lphan": "Loc Phan Phuc",
@@ -17,6 +20,33 @@
             "filter": "Features filtering data using Observables & Rxjs",
             "stateManagement": "Using akita to manage State management",
             "reactiveForm": "Implement reactive form, create abstract form for 2 both of cases (creation, edition)"
+        }
+    },
+    "todoPage":{
+        "block" :{
+            "formTodo":{
+                "title": "Form {{typeForm}} Todo",
+                "labelTitle": "Title",
+                "placeTitle": "Title ...",
+                "messErrorRequiredTitle": "Title is required",
+                "messErrorExistTitle": "The title already exists",
+                "labelContent": "Content",
+                "placeContent": "Content ...",
+                "messErrorRequiredContent": "Content is required",
+                "labelCreator": "Creator",
+                "placeCreator": "Creator ...",
+                "messErrorRequiredCreator": "Creator is required",
+                "labelCompleted": "Completed"
+            },
+            "table":{
+                "title": "List Todo",
+                "rowTitle": "Title",
+                "rowlContent": "Content",
+                "rowlCreator": "Creator",
+                "rowlCompleted": "Completed",
+                "tooltipEdit": "Edit",
+                "tooltipDelete": "Delete"
+            }
         }
     }
 }
