Switch from bootstrap to angular material And fix bug

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,9 @@
 {
+    "language": "Language",
+    "english": "English",
+    "vienamese": "Vienamese",
+    "filter": "Filter",
+    "cancel": "Cancel",
     "add": "Add",
     "edit": "Edit",
     "submit": "Submit",
