--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -1,4 +1,9 @@
 {
+    "language": "Ngôn ngữ",
+    "english": "Tiếng Anh",
+    "vienamese": "Tiếng Việt",
+    "filter": "Lọc",
+    "cancel": "Đóng",
     "add": "Thêm",
     "edit": "Sửa",
     "submit": "Gởi",
