Update icon and dialog and layout material

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,8 @@
 {
+    "alertDelete": "Are you sure you want to delete?",
+    "agree": "Agree",
+    "disagree": "Disagree",
+    "notification": "Notification",
     "language": "Language",
     "english": "English",
     "vienamese": "Vienamese",
