--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -1,4 +1,8 @@
 {
+    "alertDelete": "Bạn có thực sự muốn xoá?",
+    "agree": "Đồng ý",
+    "disagree": "Không",
+    "notification": "Thông báo",
     "language": "Ngôn ngữ",
     "english": "Tiếng Anh",
     "vienamese": "Tiếng Việt",
