--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -120,18 +120,27 @@
           <context context-type="linenumber">42</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="block-formTodo-labelCompleted" datatype="html">
+        <source>
+            Completed
+        </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/todo/components/form-todo/form-todo.component.html</context>
+          <context context-type="linenumber">54</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="block-formTodo-cancel" datatype="html">
         <source>Cancel</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-todo/form-todo.component.html</context>
-          <context context-type="linenumber">57</context>
+          <context context-type="linenumber">59</context>
         </context-group>
       </trans-unit>
       <trans-unit id="block-formTodo-submit" datatype="html">
         <source> Submit </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-todo/form-todo.component.html</context>
-          <context context-type="linenumber">60</context>
+          <context context-type="linenumber">62</context>
         </context-group>
       </trans-unit>
       <trans-unit id="filter" datatype="html">
@@ -169,6 +178,11 @@
           <context context-type="sourcefile">src/app/modules/todo/components/list-todo/list-todo.component.html</context>
           <context context-type="linenumber">29</context>
         </context-group>
+      </trans-unit>
+      <trans-unit id="form-todo-label-completed" datatype="html">
+        <source>
+                            Completed
+                        </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/list-todo/list-todo.component.html</context>
           <context context-type="linenumber">39</context>
