--- a/src/locale/messages.vi.xlf
+++ b/src/locale/messages.vi.xlf
@@ -274,6 +274,22 @@
 					</context>
 				</context-group>
 			</trans-unit>
+			<trans-unit id="block-formTodo-deadline" datatype="html">
+				<source>
+					Deadline
+				</source>
+				<target>
+					Deadline
+				</target>
+				<context-group purpose="location">
+					<context context-type="sourcefile">
+						src/app/modules/todo/components/form-todo/form-todo.component.html
+					</context>
+					<context context-type="linenumber">
+						67
+					</context>
+				</context-group>
+			</trans-unit>
 			<trans-unit id="block-formTodo-labelCompleted" datatype="html">
 				<source>
 					Completed
@@ -415,6 +431,38 @@
 					</context>
 					<context context-type="linenumber">
 						39
+					</context>
+				</context-group>
+			</trans-unit>
+			<trans-unit id="block-table-row-createdDate" datatype="html">
+				<source>
+					CreatedDate
+				</source>
+				<target>
+					Ngày tạo
+				</target>
+				<context-group purpose="location">
+					<context context-type="sourcefile">
+						src/app/modules/todo/components/list-todo/list-todo.component.html
+					</context>
+					<context context-type="linenumber">
+						93
+					</context>
+				</context-group>
+			</trans-unit>
+			<trans-unit id="block-table-row-deadline" datatype="html">
+				<source>
+					Deadline
+				</source>
+				<target>
+					Deadline
+				</target>
+				<context-group purpose="location">
+					<context context-type="sourcefile">
+						src/app/modules/todo/components/list-todo/list-todo.component.html
+					</context>
+					<context context-type="linenumber">
+						100
 					</context>
 				</context-group>
 			</trans-unit>
