--- a/src/locale/messages.en.xlf
+++ b/src/locale/messages.en.xlf
@@ -274,6 +274,22 @@
 					</context>
 				</context-group>
 			</trans-unit>
+			<trans-unit id="block-formTodo-messErrorIncorrectTimeFormat" datatype="html">
+				<source>
+					Incorrect time format
+				</source>
+				<target>
+					Incorrect time format
+				</target>
+				<context-group purpose="location">
+					<context context-type="sourcefile">
+						src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html
+					</context>
+					<context context-type="linenumber">
+						112
+					</context>
+				</context-group>
+			</trans-unit>
 			<trans-unit id="block-formTodo-labelCompleted" datatype="html">
 				<source>
 					Completed
@@ -417,6 +433,22 @@
 						39
 					</context>
 				</context-group>
+			</trans-unit>
+			<trans-unit id="block-table-row-deadline" datatype="html">
+				<source>
+					Deadline
+				</source>
+				<target>
+					Deadline
+				</target>
+			</trans-unit>
+			<trans-unit id="block-table-row-createdDate" datatype="html">
+				<source>
+					Created date
+				</source>
+				<target>
+					Created date
+				</target>
 			</trans-unit>
 			<trans-unit id="block.table.title" datatype="html">
 				<source>
