--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -22,7 +22,7 @@
     </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
-          <context context-type="linenumber">26</context>
+          <context context-type="linenumber">27</context>
         </context-group>
       </trans-unit>
       <trans-unit id="block-formTodo-messErrorExistTitle" datatype="html">
@@ -31,29 +31,29 @@
     </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
-          <context context-type="linenumber">35</context>
+          <context context-type="linenumber">36</context>
         </context-group>
       </trans-unit>
       <trans-unit id="block-formTodo-messErrorMaxlength" datatype="html">
         <source>Max length is: </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
-          <context context-type="linenumber">44</context>
+          <context context-type="linenumber">45</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
-          <context context-type="linenumber">70</context>
+          <context context-type="linenumber">72</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
-          <context context-type="linenumber">96</context>
+          <context context-type="linenumber">98</context>
         </context-group>
       </trans-unit>
       <trans-unit id="block-formTodo-labelCreator" datatype="html">
         <source>Creator</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
-          <context context-type="linenumber">51</context>
+          <context context-type="linenumber">52</context>
         </context-group>
       </trans-unit>
       <trans-unit id="block-formTodo-messErrorRequiredContent" datatype="html">
@@ -62,18 +62,18 @@
     </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
-          <context context-type="linenumber">61</context>
+          <context context-type="linenumber">63</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
-          <context context-type="linenumber">87</context>
+          <context context-type="linenumber">89</context>
         </context-group>
       </trans-unit>
       <trans-unit id="block-formTodo-labelContent" datatype="html">
         <source>Content</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
-          <context context-type="linenumber">77</context>
+          <context context-type="linenumber">78</context>
         </context-group>
       </trans-unit>
       <trans-unit id="block-formTodo-messErrorIncorrectTimeFormat" datatype="html">
@@ -82,7 +82,16 @@
       </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
-          <context context-type="linenumber">112</context>
+          <context context-type="linenumber">118</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="block-formTodo-messErrorLimitTime" datatype="html">
+        <source>
+        You are not allowed to choose a time before today
+      </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
+          <context context-type="linenumber">128</context>
         </context-group>
       </trans-unit>
       <trans-unit id="block-formTodo-labelCompleted" datatype="html">
@@ -91,7 +100,7 @@
     </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
-          <context context-type="linenumber">123</context>
+          <context context-type="linenumber">138</context>
         </context-group>
       </trans-unit>
       <trans-unit id="block-formTodo-cancel" datatype="html">
@@ -100,7 +109,7 @@
     </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
-          <context context-type="linenumber">133</context>
+          <context context-type="linenumber">148</context>
         </context-group>
       </trans-unit>
       <trans-unit id="block-formTodo-submit" datatype="html">
@@ -109,21 +118,7 @@
       </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/form-add-and-edit-todo/form-add-and-edit-todo.component.html</context>
-          <context context-type="linenumber">143</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="block.table.title" datatype="html">
-        <source>List Todo</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/modules/todo/pages/list-todo-page/list-todo.component.html</context>
-          <context context-type="linenumber">7</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="button.add" datatype="html">
-        <source>Add</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/modules/todo/pages/list-todo-page/list-todo.component.html</context>
-          <context context-type="linenumber">12</context>
+          <context context-type="linenumber">158</context>
         </context-group>
       </trans-unit>
       <trans-unit id="notification-alertDelete" datatype="html">
@@ -151,6 +146,20 @@
           <context context-type="linenumber">17</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="block.table.title" datatype="html">
+        <source>List Todo</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/todo/pages/list-todo-page/list-todo-page.component.html</context>
+          <context context-type="linenumber">7</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="button.add" datatype="html">
+        <source>Add</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/todo/pages/list-todo-page/list-todo-page.component.html</context>
+          <context context-type="linenumber">12</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="filter" datatype="html">
         <source> Filter </source>
         <context-group purpose="location">
@@ -162,34 +171,34 @@
         <source>Title</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/filter-todo/filter-todo.component.html</context>
-          <context context-type="linenumber">10</context>
+          <context context-type="linenumber">11</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form-todo-label-creator" datatype="html">
         <source>
-              Creator
-            </source>
+            Creator
+          </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/filter-todo/filter-todo.component.html</context>
-          <context context-type="linenumber">18</context>
+          <context context-type="linenumber">20</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form-todo-label-content" datatype="html">
         <source>
-              Content
-            </source>
+            Content
+          </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/filter-todo/filter-todo.component.html</context>
-          <context context-type="linenumber">28</context>
+          <context context-type="linenumber">31</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form-todo-label-completed" datatype="html">
         <source>
-              Completed
-            </source>
+            Completed
+          </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/filter-todo/filter-todo.component.html</context>
-          <context context-type="linenumber">38</context>
+          <context context-type="linenumber">42</context>
         </context-group>
       </trans-unit>
       <trans-unit id="block-table-row-title" datatype="html">
